<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PillReminder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navdrawer_item_activepills">Active Pills</string>
    <string name="navdrawer_item_pills">Pills</string>
    <string name="navdrawer_item_archived">Archive</string>
    <string name="navdrawer_item_deleted">Deleted</string>

    <string name="navdrawer_item_feedback">Feedback</string>
    <string name="navdrawer_item_help">Help</string>

    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="others">Others</string>
    <string name="btn_new_pill_save">Save</string>
    <string name="btn_new_pill_cancel">Cancel</string>
    <string name="txt_new_pill_name">Write Pill\'s name</string>
    <string name="txt_new_pill_picture">Select Pill\'s Picture</string>
    <string name="menu_action_addPill">Add Pill</string>
    <string name="new_pill_error_text">You can\'t create a new pill without no name</string>
    <string name="navdrawer_item_nextpills">Next Pills</string>
    <string name="menu_action_deletePill">Delete Pill</string>
    <string name="dialog_remove_pill">Do you want to remove this pill?</string>
    <string name="dialog_remove_pill_title">Remove Pill</string>
    <string name="dialog_remove_pill_message">Do you want to remove this pill? If you select YES, all pill reminders related to this pill will be removed too.</string>
    <string name="dialog_remove_pill_reminder_title">Remove Pill Reminder</string>
    <string name="dialog_remove_pill_reminder_message">Do you want to remove this pill reminder?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="type_select_date">You must select a valid date start, a valid date finish and a description</string>
    <string name="menu_action_view_pill_reminder">View Pill Reminder</string>
    <string name="menu_action_archive_pill_reminder">Archive Pill Reminder</string>
    <string name="menu_action_restore_pill_reminder">Restore Pill Reminder</string>
    <string name="menu_action_delete_pill_reminder">Delete Pill Reminder</string>
    <string name="menu_action_add_pill_reminder">Add Pill Reminder</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_save_pill_reminder">Save Pill Reminder</string>
    <string name="dates">Dates:</string>
    <string name="exit">Tap back button in order to exit</string>
    <string name="image">Pill\'s Image</string>
    <string name="selectHours">Select Hours</string>
    <string name="everyHours">Every hours: </string>
    <string name="hourStart">Hour Start</string>
    <string name="selectHour">Select Hour</string>
    <string name="btn_next">Next</string>
    <string name="finishDate">Finish Date</string>
    <string name="startDate">Start Date</string>
    <string name="selectPill">Select Pill</string>
    <string name="selectType">Select Type</string>
    <string name="description">Description</string>
    <string name="byhours">By Hours</string>
    <string name="bydaysandmeals">By Days and Meals</string>
    <string name="selectDate">Select Date</string>
    <string name="lastAlarm">This was the last alarm, because the finish date has passed</string>
    <string name="selectPillAndStartHour">You must select  frequency of your pill and  start hour</string>
    <string name="errorSave">You must fill  description name and every hours\' field. Also you can\'t select a finish date before start date</string>
    <string name="reminderArchived">Reminder Archived</string>
    <string name="reminderDeleted">Reminder Deleted</string>
    <string name="reminderRemoved">Reminder Removed</string>
    <string name="preferences_category_multimedia">Multimedia</string>
    <string name="preference_check_sound_title">Sound</string>
    <string name="preference_check_vibration_title">Vibration</string>
    <string name="preference_ringtone_title">Alarm tone</string>
    <plurals name="hours">
        <item quantity="one">Every: 1 Hour</item>
        <item quantity="other">Every: %d  Hours</item>
    </plurals>
</resources>
