<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.plaglabs.pillreminder.app.MainActivity" >
    <item android:id="@+id/action_save_pill_reminder"
        android:icon="@drawable/ic_action_save"
        android:title="@string/menu_action_save_pill_reminder"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_archive_pill_reminder"
        android:icon="@drawable/ic_action_labels"
        android:title="@string/menu_action_archive_pill_reminder"
        app:showAsAction="never" />
    <item android:id="@+id/action_restore_pill_reminder"
        android:icon="@drawable/ic_action_email"
        android:title="@string/menu_action_restore_pill_reminder"
        app:showAsAction="never" />
    <item android:id="@+id/action_delete_pill_reminder"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/menu_action_delete_pill_reminder"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_settings"
        android:title="@string/menu_action_settings"
        android:enabled="false"
        app:showAsAction="ifRoom|withText" />
</menu>