<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectHours"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_below="@id/title"
        android:id="@+id/llDateStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/everyHours"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/etEveryHours"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:id="@+id/llDateFinish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llDateStart">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hourStart"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvHourStart"
            android:layout_width="0dp"
            android:text="@string/selectHour"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_new_pill_cancel"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:text="@string/btn_next"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>