<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/tvPill"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:gravity="center" />

    <EditText
        android:layout_margin="10dp"
        android:id="@+id/etDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="19sp"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/llDateStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/startDate"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvDateStart"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:id="@+id/llDateFinish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/finishDate"
            android:textSize="20sp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvDateFinish"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/everyHours"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/tvEveryHours"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hourStart"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvHourStart"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <ImageView
        android:layout_width="fill_parent"
        android:id="@+id/imgPill"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"/>

</LinearLayout>